--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<selenium.version>3.141.59</selenium.version>
 		<webdriver.version>5.0.1</webdriver.version>
 		<testng.version>6.8.5</testng.version>
+		<cucumber.version>6.11.0</cucumber.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +49,26 @@
 			<artifactId>testng</artifactId>
 			<version>${testng.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-spring -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-spring</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-testng</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -57,19 +78,17 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <!-- <suiteXmlFiles>
-                        TestNG suite XML files
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles> -->
-                    <includes>
-                    	<include>com.mine.vj.learningSpringBoot.SpringBootTestNG</include>
-                    </includes>
-                </configuration>
-            </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<!-- <suiteXmlFiles> TestNG suite XML files <suiteXmlFile>testng.xml</suiteXmlFile> 
+						</suiteXmlFiles> -->
+					<includes>
+						<include>com.mine.vj.learningSpringBoot.SpringBootTestNG</include>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
